--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ version = attr: sixelmath.__version__
 author = Collin J. Delker
 author_email = code@collindelker.com
 url = https://github.com/cdelker/sixelmath
-description = Render LaTeX math and Sympy expressions to Sixel Terminal Graphics. Suuports any Math-enabled font, no LaTeX installation required.
+description = Render LaTeX math and Sympy expressions to Sixel Terminal Graphics. Suports any Math-enabled font, no LaTeX installation required.
 long_description = file: README.md
 long_description_content_type = text/markdown
 keywords = LaTeX, math, sympy, sixel, terminal
